--- a/style.css
+++ b/style.css
@@ -243,8 +243,9 @@ section {
 
 .features .box-container
 {
+   
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     overflow: hidden;
 }
@@ -388,6 +389,392 @@ section {
     padding-right: 1rem;
 }
 
+.trainers .box-container
+
+{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.trainers .heading
+{
+    text-align: center;
+    margin-bottom: 3rem;
+    position: relative;
+}
+
+
+
+.trainers .heading::before
+{
+    content: '';
+    position: absolute;
+    top: 50%; left: 0;
+    transform: translateY(-50%);
+    height: .1rem;
+    width: 100%;
+    background: #aaa;
+    z-index: -1;
+}
+
+.trainers .heading span
+{
+    font-size: 3rem;
+    color: #f00;
+    background: #000;
+    padding: .5rem 1.5rem;
+}
+.trainers .box-container .box
+{
+    height: 40rem;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.trainers .box-container .box  img
+{
+    height:100%;
+    width: 100%;
+    object-fit:cover;
+    margin: 5px;
+}
+
+.trainers .box-container .box .content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    padding: 2rem;
+    margin-left: 5px;
+    transform: translateY(6.5rem);
+}
+
+
+.trainers .box-container .box .content:hover
+{
+    transform: translate(0);
+}
+
+
+
+.trainers .box-container .box .content span {
+    font-size: 1.5rem;
+    color: #f00;
+}
+
+.trainers .box-container .box .content h3
+{
+    font-size: 2rem;
+    color: #fff;
+    padding-top: .5rem;
+}
+
+.trainers .box-container .box .content .share
+{
+    padding-top: 2rem;
+    margin-top: 1.5rem;
+    border-top: .1rem solid #aaa;
+}
+
+.trainers .box-container .box .content .share a
+{
+    font-size: 2rem;
+    color: #fff;
+    margin-left: 1.5rem;
+}
+.trainers .box-container .box .content .share a:hover {
+    color: #f00;
+}
+
+.banner
+{
+background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../project-9/image/HD-wallpaper-bodybuilding-gym-athlete-bodybuilder-biceps-arms-muscles.jpg) no-repeat;
+background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  text-align: center;
+}
+
+.banner span
+{
+    font-size: 2rem;
+    color: #f00;
+}
+
+.banner h3
+{
+    padding-top: 1rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 3.5rem;
+}
+.banner p
+{
+    margin: 1rem auto;
+    max-width: 60rem;
+    font-size: 1.5rem;
+    color: #aaa;
+    line-height: 2;
+   
+}
+
+.review
+{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.review .information
+{
+    flex: 1 1 35rem;
+}
+
+.review .information span
+{
+    font-size: 2rem;
+    color: #f00;
+}
+
+.review .information h3
+{
+    font-size: 3rem;
+    color: #fff;
+    padding-top: 1rem;
+}
+
+.review .information p
+{
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #aaa;
+    padding: 1rem 0;
+}
+
+
+
+.review .review-slider
+{
+    flex: 1 1 60rem;
+}
+
+.review .review-slider .slide
+{
+    background: linear-gradient(130deg, #111 93%, transparent 90%);
+    padding: 2rem 4rem;
+    margin: 15px;
+}
+
+.review .review-slider .slide p
+{
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #aaa;
+}
+
+.review .review-slider .slide .user
+{
+    display:flex;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+.review .review-slider .slide .user img
+{
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.review .review-slider .slide .user h3
+{
+    font-size: 2rem;
+    color: #fff;
+}
+.review .review-slider .slide .user span
+{
+    color:#f00;
+    font-size: 1.5rem;
+}
+
+.review .review-slider .slide .user i
+{
+    font-size: 5rem;
+    margin-left: auto;
+    margin-right: 2rem;
+    color: #f00;
+}
+
+
+.blogs .slide
+{
+    background: #111;
+    margin-bottom: 7rem;
+}
+
+.blogs .slide .image
+{
+    height: 25rem;
+    width: 100%;
+    overflow:hidden
+}
+.blogs .slide .image img
+{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.blogs .slide:hover .image img
+{
+    transform: scale(1.1);
+}
+
+.blogs .slide .content
+{
+    padding: 2rem;
+}
+
+.blogs .slide .content .link
+{
+    padding-bottom:1rem;
+    font-size: 1.5rem;
+}
+
+.blogs .slide .content .link a
+{
+    color: #f00;
+}
+.blogs .slide .content .link a:hover
+{
+    color: #fff;
+}
+
+.blogs .slide .content  span
+{
+    color: #fff;
+    padding: 0 1rem;
+}
+.blogs .slide .content  h3
+{
+    font-size: 2rem;
+    color: #fff;
+    line-height: 1.5;
+}
+
+.blogs .slide .content  p
+{
+    font-size: 1.5rem;
+    color: #aaa;
+    line-height:2;
+}
+
+.footer
+{
+
+}
+
+.footer .box-container
+{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+}
+
+.footer .box-container .box h3
+{
+    font-size: 2rem;
+    color: #fff;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box .links
+{
+    font-size: 1.5rem;
+    display: block;
+    color: #aaa;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box .links:hover
+{
+    color: #f00;
+}
+
+.footer .box-container .box p
+{
+    font-size: 1.5rem;
+    color: #aaa;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box p i
+{
+    padding-right: .5rem;
+    color: #f00;
+}
+
+.footer .box-container .box .share a
+{
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background: #111;
+    border-radius: 50%;
+    margin-right: .5rem;
+    text-align: center;
+}
+
+.footer .box-container .box .share a:hover
+{
+    background: #f00;
+}
+
+.footer .box-container .box form .email 
+{
+    margin-bottom: 1rem;
+    width: 100%;
+    background: #111;
+    padding: 1.2rem;
+    font-size: 1.5rem;
+    color: #fff;
+    text-transform: none;
+}
+.credit {
+    font-size: 2rem;
+    text-align: center;
+    padding: 2rem;
+    color: #fff;
+    background: #111;
+    line-height: 1.5;
+}
+
+.credit span {
+    color: #f00;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -476,4 +863,11 @@ section {
     {
     flex-flow: column-reverse;
     }
+
+    .trainers .box-container 
+    {
+        display: inline-block;
+        margin-left:10rem;
+    }
+
 }
